# Jamph-ML-Trainer

./: .dockerignore  .gitignore  Dockerfile.quantize  GETTING_STARTED.md  PRODUCTION_AND_TARGET_CONFIGURATIONS.md  README.md  default_description.md  docker-compose.quantize.yml  docker-compose.yml  download_model.py  example.jamph.env  example.mlflow.env  example.ollama.env  mlflow.env  pyproject.toml  quantize.ps1  quantize_model.py  test_compability.py
.claude/: instructions.md
.github/: dependabot.yml
.github/.copilot/: handoff.md  instructions.md
.github/workflows/: deploy.yaml
.nais/: README.md  nais-dev.yaml  nais-prod.yaml
model training/: .dockerignore  Dockerfile  README.md  run_models_config.json
src/jamph_ml_trainer/: __init__.py  check_repo.py  cli.py  env_utils.py  huggingface_upload.py  mlflow_tracking.py  ollama_upload.py  utils.py
training data for finetuning/: README.MD
training data for finetuning/v1/: bronze.jsonl
