[project]
name = "jamph-ml-trainer"
version = "0.1.0"
description = "Model quantization and fine-tuning toolkit with MLflow tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "mlflow>=2.18.0",
    "datasets>=3.2.0",
    "accelerate>=1.2.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.0",
    "python-dotenv>=1.0.0",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "gguf>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[project.scripts]
jamph-ml-trainer = "jamph_ml_trainer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jamph_ml_trainer"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
