[project]
name = "jamph-ml-trainer"
version = "0.1.0"
description = "CPU-based model quantization toolkit for Ollama deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.26.0",
    "python-dotenv>=1.0.0",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "gguf>=0.10.0",
    # torch, numpy, sentencepiece installed separately in Dockerfile (CPU-only)
]

[project.scripts]
jamph-ml-trainer = "jamph_ml_trainer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jamph_ml_trainer"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
