[project]
name = "jamph-ml-trainer"
version = "0.1.0"
description = "CPU-based model quantization toolkit for Ollama deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub==1.10.*",  # Pin to 0.30.x - version 1.x has XetHub/MerkleDB bugs
    "typer>=0.24.1",
    "rich>=15.0.0",
    "gguf>=0.18.0",
    "sentencepiece>=0.2.1",
    "safetensors>=0.7.0",
    "transformers>=5.5.3",
    "torch>=2.11.0",
    "numpy>=2.4.4",
]

[project.scripts]
jamph-ml-trainer = "jamph_ml_trainer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jamph_ml_trainer"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
